fix: distorted styling of auth pages and changed conntact lines

--- a/src/pages/all_properties/allProperties.module.scss
+++ b/src/pages/all_properties/allProperties.module.scss
@@ -24,7 +24,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.9);
       z-index: -1;
     }
     .hero__all-p {
